--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ nav li a:hover {
     height: 100vh;
     line-height: 100vh;
     width: 100vw;
-    background-image: url(../img/1.png);
+    background-image: url(../resources/3.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
