--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+/* LIFE HACKS
+
+bLue:
+red:
+orange:
+white:
+black:
+
+*/
+
+
 * {
     margin: 0;
     padding: 0;
@@ -139,9 +150,8 @@ nav li:hover::after {
 
 /* VIDEOS START */
 .videos{
-    height: 100vh;
     width: 100vw;
-    background-color: pink;
+    background-color: #f7f7f7;
 }
 /* VIDEOS FINISH */
 
