--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ p {
     color: #353531;
 }
 
-::-webkit-scrollbar { 
+::-webkit-scrollbar {
     display: none;
 }
 
@@ -447,6 +447,13 @@ section {
 .muziek h1::after {
     border-bottom: 0.2em solid #F7F7F7;
 }
+.musicSection{
+  display: flex;
+  justify-content: center;
+}
+.musicbox{
+  padding: 0 30px;
+}
 
 .contact {
     background: #DB504A;
@@ -539,7 +546,7 @@ section {
 }
 
 #loginBody #loginBodyChild #container #switchContainer label {
-    user-select: none;    
+    user-select: none;
     position: relative;
     display: flex;
     align-items: center;
@@ -634,7 +641,7 @@ section {
     border: none;
     outline: none;
     background: none;
-    margin: 0 calc(7vh / 2); 
+    margin: 0 calc(7vh / 2);
     border: 0.1vh solid #F7F7F7;
 }
 
